@@ -29,17 +29,6 @@ import javax.imageio.*;
  */
 public class Andie {
     private static JFrame frame;
-    private static ImagePanel imagePanel;
-    public static ResourceBundle bundle;
-    public static JMenuBar menuBar;
-
-    private static FileActions fileActions;
-    private static EditActions editActions;
-    private static ViewActions viewActions;
-    private static FilterActions filterActions;
-    private static ImageMenuBar imageMenuBar;
-    private static ColourActions colourActions;
-    private static HelpActions helpActions;
 
     /**
      * <p>
@@ -75,60 +64,46 @@ public class Andie {
         frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
 
         // The main content area is an ImagePanel
-        imagePanel = new ImagePanel();
+        ImagePanel imagePanel = new ImagePanel();
         ImageAction.setTarget(imagePanel);
         JScrollPane scrollPane = new JScrollPane(imagePanel);
         frame.add(scrollPane, BorderLayout.CENTER);
-        fileActions = new FileActions();
-        editActions = new EditActions();
-        viewActions = new ViewActions();
-        filterActions = new FilterActions();
-        imageMenuBar = new ImageMenuBar();
-        colourActions = new ColourActions();
-        helpActions = new HelpActions();
 
-
-
-
-
-
-
-
-        createMenuBar();
-
-        
-    }
-
-    private static void createMenuBar() {
         // Add in menus for various types of action the user may perform.
-        JMenuBar newMenuBar = new JMenuBar();
+        JMenuBar menuBar = new JMenuBar();
 
         // File menus are pretty standard, so things that usually go in File menus go
         // here.
-        newMenuBar.add(fileActions.createMenu());
+        FileActions fileActions = new FileActions();
+        menuBar.add(fileActions.createMenu());
 
         // Likewise Edit menus are very common, so should be clear what might go here.
-        newMenuBar.add(editActions.createMenu());
+        EditActions editActions = new EditActions();
+        menuBar.add(editActions.createMenu());
 
         // View actions control how the image is displayed, but do not alter its actual
         // content
-        newMenuBar.add(viewActions.createMenu());
+        ViewActions viewActions = new ViewActions();
+        menuBar.add(viewActions.createMenu());
 
         // Filters apply a per-pixel operation to the image, generally based on a local
         // window
-        newMenuBar.add(filterActions.createMenu());
+        FilterActions filterActions = new FilterActions();
+        menuBar.add(filterActions.createMenu());
 
         // Actions that affect the representation of colour in the image
-        newMenuBar.add(colourActions.createMenu());
+        ColourActions colourActions = new ColourActions();
+        menuBar.add(colourActions.createMenu());
 
         // Actions that alter the image such as image flip/rotate
-        newMenuBar.add(imageMenuBar.createMenu());
+        ImageMenuBar imageMenuBar = new ImageMenuBar();
+        menuBar.add(imageMenuBar.createMenu());
 
         // Provides an about page and link to online docs
-        newMenuBar.add(helpActions.createMenu());
+        HelpActions helpActions = new HelpActions();
+        menuBar.add(helpActions.createMenu());
 
-        frame.setJMenuBar(newMenuBar);
-        frame.repaint();
+        frame.setJMenuBar(menuBar);
         frame.pack();
         frame.setVisible(true);
     }
@@ -137,23 +112,6 @@ public class Andie {
         return frame;
     }
 
-
-    public static void setLanguage(){
-        /*frame.repaint();
-        imagePanel.repaint();
-        menuBar.repaint();*/
-        /*frame.dispose();
-        try{
-            createAndShowGUI();
-        }
-        catch(Exception e){
-            System.out.println(e);
-        }*/
-
-
-       createMenuBar();
-        
-    }
     /**
      * <p>
      * Main entry point to the ANDIE program.
@@ -171,20 +129,16 @@ public class Andie {
     public static void main(String[] args) throws Exception {
         javax.swing.SwingUtilities.invokeLater(new Runnable() {
 
-            @SuppressWarnings("deprecation")
             public void run() {
 
                 // Making preferences and locale
                 Preferences p = Preferences.userNodeForPackage(Andie.class);
-                Locale.setDefault(new Locale(p.get("language", "id"), p.get("country", "ID")));
-                System.out.println(p.get("language", "fail"));
-                //Locale en_NZ = Locale.of("en", "NZ");
-                //Locale.setDefault(en_NZ);
+                Locale.setDefault(new Locale(p.get("language", "en"), p.get("country", "NZ")));
+                // Locale en_NZ = Locale.of("en", "NZ");
+                // Locale.setDefault(en_NZ);
 
                 // Now making the ResourceBundle
-                //ResourceBundle bundle = ResourceBundle.getBundle("cosc202/andie/MessageBundle");
-                bundle = ResourceBundle.getBundle("cosc202/andie/MessageBundle");
-
+                ResourceBundle bundle = ResourceBundle.getBundle("cosc202/andie/MessageBundle");
                 //Line below is for testing the bundle
                 //System.out.println(bundle.getString("convertToGreyAction"));
 
